Bug 16515 - Did you mean? links don't wrap on smaller screens
This patch tweaks some CSS in the OPAC to give the "Did you mean" block
better layout on smaller screens.

To test, apply the patch and process LESS files. Enable "Did you mean"
plugins for the OPAC in Administration.

Perform a search in the OPAC and confirm that the "Did you mean" block
looks correct. Resize your browser to various widths and confirm that
the block handles all sizes well.

--- a/koha-tmpl/opac-tmpl/bootstrap/less/opac.less
+++ b/koha-tmpl/opac-tmpl/bootstrap/less/opac.less
@@ -1721,10 +1721,16 @@ input.editshelf {
 #didyoumean {
     background-color: #EEE;
     border: 1px solid #E8E8E8;
-    margin: 0 0 0.5em;
+    box-sizing: border-box;
+    margin: .5em 1.5em;
     text-align: left;
     padding: 0.5em;
     .border-radius-all(3px);
+
+    &.dym-loaded {
+        border-color: #F4ECBE;
+        background-color: #FFFBEA;
+    }
 }
 
 .suggestionlabel {
@@ -1733,7 +1739,6 @@ input.editshelf {
 
 .searchsuggestion {
     padding: 0.2em 0.5em;
-    white-space: nowrap;
     display: inline-block;
 }
 
